# che

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  ch8asm.c  che.c  che_cycle.c  che_cycle.h  che_log.c  che_log.h  che_machine.c  che_machine.h  che_rand.h  che_scr.c  che_scr.h  che_time.c  che_time.h  che_time_test.c  configure-windows.sh  configure.ac  dump_ch8_file.sh  set_ready_autotools.sh
platform/apple/: che_time_platform.c
platform/linux/: che_scr.c  che_scr_platform.h  che_time_linux.c  che_time_platform.c
src/: Makefile.am  che.c  che.d  che_cfg.h  che_cycle.c  che_cycle.d  che_io.h  che_io_console.c  che_io_console.h  che_io_sdl.c  che_io_sdl.h  che_log.d  che_machine.c  che_machine.d  che_machine.h  che_rand.c  che_rand.d  che_scr.d  che_scr.h  che_time.d  che_time_apple.c  che_time_linux.c  che_time_windows.c  che_util.h
src/platform/linux/: che_time_platform.d
test/: loop.ch8  test1.asm
tests/: che_time_test.c  che_time_test.d  test1.asm  test_skips.ch8  test_wait1sec.ch8
